force-app/main/default/objects/BSC_Risk_Category__c/fields/Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority__c</fullName>
    <description>To be mapped with the case priority - if needs to be created</description>
    <label>Case Priority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>