force-app/main/default/objects/BSC_Risk_Category__c/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <description>Developer Name for the case record type to be created</description>
    <label>Case Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>