force-app/main/default/objects/BSC_Risk_Category__c/fields/Create_a_Case__c.field-meta.xml
<CustomField>
    <fullName>Create_a_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create a Case</label>
    <type>Checkbox</type>
</CustomField>