force-app/main/default/objects/BSC_Risk_Category__c/fields/Final_Message_To_Display__c.field-meta.xml
<CustomField>
    <fullName>Final_Message_To_Display__c</fullName>
    <label>Final Message To Display</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>