force-app/main/default/objects/BSC_Risk_Category__c/fields/Risk_Assessment_Definition__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Definition__c</fullName>
    <label>Risk Assessment  Definition</label>
    <referenceTo>BSC_Risk_Assessment_Definition__c</referenceTo>
    <relationshipLabel>Risk Categories</relationshipLabel>
    <relationshipName>Risk_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>