force-app/main/default/objects/BSC_Risk_Category__c/fields/Update_a_Case__c.field-meta.xml
<CustomField>
    <fullName>Update_a_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update a Case</label>
    <type>Checkbox</type>
</CustomField>