force-app/main/default/objects/BSC_Risk_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Minimum_Score__c</columns>
    <columns>Final_Message_To_Display__c</columns>
    <columns>Case_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>